index mainCOntent format

--- a/app/views/Home/mainContent.html
+++ b/app/views/Home/mainContent.html
@@ -8,71 +8,85 @@
 			</h2>
 			<div class="floorTop">
 				<ul class="floorTop-nav">
-
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.1&amp;q=%B1%A3%CA%AA&amp;user_action=initiative&amp;at_topsearch=1&amp;sort=st&amp;type=p&amp;cat=&amp;style="
-						target="_blank">保湿</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.2&amp;q=%C3%C0%B0%D7&amp;user_action=initiative&amp;at_topsearch=1&amp;sort=st&amp;type=p&amp;cat=&amp;style="
-						target="_blank">美白</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.3&amp;active=1&amp;from=sn_1_rightnav&amp;area_code=330100&amp;search_condition=7&amp;style=g&amp;sort=s&amp;n=60&amp;s=0&amp;cat=50043479"
-						target="_blank">洗护</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.4&amp;cat=50031564&amp;acm=08227.1003.1.50031564_6&amp;scm=1003.3.08227.1"
-						target="_blank">BB霜</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.5&amp;cat=50026698&amp;acm=08223.1003.1.50026698_6&amp;scm=1003.3.08223.1"
-						target="_blank">防晒</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.6&amp;cat=50040799&amp;acm=08225.1003.1.50040799_6&amp;scm=1003.3.08225.1"
-						target="_blank">脱毛膏</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.7&amp;start_price=&amp;end_price=&amp;zk_type=0&amp;wwonline=1&amp;search_condition=16&amp;cat=50043345&amp;sort=s&amp;style=g&amp;vmarket=0&amp;from=sn_1_cat&amp;q="
-						target="_blank">珍珠</a></li>
-					<li><a
-						href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.8&amp;q=&amp;area_code=310000&amp;sort=s&amp;style=g&amp;vmarket=0&amp;from=sn_1_guide&amp;guideType=0&amp;guide=266%3A1103&amp;cat=50862010"
-						target="_blank">户外专业表</a></li>
-
+					<li>
+						<a href="" target="_blank">保湿</a>
+					</li>
+					<li>
+						<a href="" target="_blank">美白</a>
+					</li>
+					<li>
+						<a href="" target="_blank">洗护</a>
+					</li>
+					<li>
+						<a href="" target="_blank">BB霜</a>
+					</li>
+					<li>
+						<a href="" target="_blank">防晒</a>
+					</li>
+					<li>
+						<a href="" target="_blank">脱毛膏</a>
+					</li>
+					<li>
+						<a href="" target="_blank">珍珠</a>
+					</li>
+					<li>
+						<a href="" target="_blank">户外专业表</a>
+					</li>
 				</ul>
 			</div>
 
 			<div class="floorCon clearfix">
 				<div class="floorCon-logo j_aldLogo">
 					<ul class="fCl-slide" style="position: absolute; width: 999999px; left: -240px;">
-						<li class="ks-switchable-panel-internal160" style="display: block; float: left;"><a
-							href="http://chowtaifook.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.59957_6" title="周大福" target="_blank"><img
-								width="90" height="45" data-src="http://img01.taobaocdn.com/tps/i1/T1GZ_UXjteXXXQXDnq-90-45.png"></a><a
-							href="http://pechoin.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.3278173_6" title="百雀羚" target="_blank"><img
-								width="90" height="45" data-src="http://img01.taobaocdn.com/tps/i1/T1aVHUXgdgXXXQXDnq-90-45.png"></a><a
-							href="http://olay.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.20085_6" title="Olay/玉兰油" target="_blank"><img
-								width="90" height="45" data-src="http://img04.taobaocdn.com/tps/i4/T11jjUXnVbXXXQXDnq-90-45.png"></a><a
-							href="http://meifubao.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.3284955_6" title="美肤宝" target="_blank"><img
-								width="90" height="45" data-src="http://img02.taobaocdn.com/tps/i2/T1qQHPXjVoXXXQXDnq-90-45.png"></a><a
-							href="http://bolonyr.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.55643_6" title="Bolon/暴龙" target="_blank"><img
-								width="90" height="45" data-src="http://img03.taobaocdn.com/tps/i3/T1eizPXjtoXXXQXDnq-90-45.png"></a></li>
-						<li class="ks-switchable-panel-internal160" style="display: block; float: left;"><a
-							href="http://xybc.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.59732_6" title="相宜本草" target="_blank"><img
-								width="90" height="45" data-src="http://img01.taobaocdn.com/tps/90919986/T2iZH6XoxaXXXXXXXX_!!90919986.jpg"></a><a
-							href="http://bluemoon.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.3547926_6" title="蓝月亮" target="_blank"><img
-								width="90" height="45" data-src="http://img03.taobaocdn.com/tps/i3/T1M0YSXgNmXXXQXDnq-90-45.png"></a><a
-							href="http://zwfzb.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.25976052_6" title="张万福珠宝" target="_blank"><img
-								width="90" height="45" data-src="http://img04.taobaocdn.com/tps/i4/T1gr6YXXdaXXXQXDnq-90-45.png"></a><a
-							href="http://etude.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.20035_6" title="Etude/爱丽" target="_blank"><img
-								width="90" height="45" data-src="http://img03.taobaocdn.com/tps/i3/T1PoYTXj8fXXXQXDnq-90-45.png"></a><a
-							href="http://maybelline.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.20075_6" title="Maybelline/美宝莲"
-							target="_blank"><img width="90" height="45" data-src="http://img04.taobaocdn.com/tps/i4/T1BBQYXitaXXXQXDnq-90-45.png"></a></li>
-						<li class="ks-switchable-panel-internal160" style="display: block; float: left;"><a
-							href="http://dongxiang.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.10275777_6" title="东祥" target="_blank"><img
-								width="90" height="45" src="http://img01.taobaocdn.com/tps/i1/T1.YrVXnxXXXXQXDnq-90-45.png"></a><a
-							href="http://haobaimpression.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.78825530_6"
-							title="HAOBAIMPRESSION/豪8印象" target="_blank"><img width="90" height="45"
-								src="http://img04.taobaocdn.com/tps/i4/T1vv2TXXpmXXXQXDnq-90-45.png"></a><a
-							href="http://pulais.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.87172189_6" title="Pulais/普莱斯"
-							target="_blank"><img width="90" height="45" src="http://img03.taobaocdn.com/tps/i3/T1vqnYXehaXXXQXDnq-90-45.png"></a><a
-							href="http://walch.tmall.com?scm=1003.3.12003.0&amp;spm=0&amp;acm=12003.1003.378.247.1.6301204_6" title="Walch/威露士" target="_blank"><img
-								width="90" height="45" src="http://img01.taobaocdn.com/tps/T1tcCtXo4QXXXXXXXX-90-45.png"></a><a
-							href="http://brand.tmall.com/categoryIndex.htm?spm=3.1000474.0.131.f002d6&amp;industryId=101" title="" target="_blank">更多品牌&gt;&gt;</a></li>
+						<li class="ks-switchable-panel-internal160" style="display: block; float: left;">
+							<a href="" title="周大福" target="_blank">
+								<img width="90" height="45" data-src="http://img01.taobaocdn.com/tps/i1/T1GZ_UXjteXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="百雀羚" target="_blank">
+								<img width="90" height="45" data-src="http://img01.taobaocdn.com/tps/i1/T1aVHUXgdgXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="Olay/玉兰油" target="_blank">
+								<img width="90" height="45" data-src="http://img04.taobaocdn.com/tps/i4/T11jjUXnVbXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="美肤宝" target="_blank">
+								<img width="90" height="45" data-src="http://img02.taobaocdn.com/tps/i2/T1qQHPXjVoXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="Bolon/暴龙" target="_blank">
+								<img width="90" height="45" data-src="http://img03.taobaocdn.com/tps/i3/T1eizPXjtoXXXQXDnq-90-45.png">
+							</a>
+						</li>
+						<li class="ks-switchable-panel-internal160" style="display: block; float: left;">
+							<a href="" title="相宜本草" target="_blank">
+								<img width="90" height="45" data-src="http://img01.taobaocdn.com/tps/90919986/T2iZH6XoxaXXXXXXXX_!!90919986.jpg">
+							</a>
+							<a href="" title="蓝月亮" target="_blank">
+								<img width="90" height="45" data-src="http://img03.taobaocdn.com/tps/i3/T1M0YSXgNmXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="张万福珠宝" target="_blank">
+								<img width="90" height="45" data-src="http://img04.taobaocdn.com/tps/i4/T1gr6YXXdaXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="Etude/爱丽" target="_blank">
+								<img width="90" height="45" data-src="http://img03.taobaocdn.com/tps/i3/T1PoYTXj8fXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="Maybelline/美宝莲" target="_blank">
+								<img width="90" height="45" data-src="http://img04.taobaocdn.com/tps/i4/T1BBQYXitaXXXQXDnq-90-45.png">
+							</a>
+						</li>
+						<li class="ks-switchable-panel-internal160" style="display: block; float: left;">
+							<a href="" title="东祥" target="_blank">
+								<img width="90" height="45" src="http://img01.taobaocdn.com/tps/i1/T1.YrVXnxXXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="HAOBAIMPRESSION/豪8印象" target="_blank">
+								<img width="90" height="45" src="http://img04.taobaocdn.com/tps/i4/T1vv2TXXpmXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="Pulais/普莱斯" target="_blank">
+								<img width="90" height="45" src="http://img03.taobaocdn.com/tps/i3/T1vqnYXehaXXXQXDnq-90-45.png">
+							</a>
+							<a href="" title="Walch/威露士" target="_blank">
+								<img width="90" height="45" src="http://img01.taobaocdn.com/tps/T1tcCtXo4QXXXXXXXX-90-45.png">
+							</a>
+							<a href="" title="" target="_blank">更多品牌&gt;&gt;</a>
+						</li>
 					</ul>
 					<ul class="fCl-nav ui-slide-nav-mini">
 						<li class="ks-switchable-trigger-internal159">•</li>
@@ -81,46 +95,49 @@
 					</ul>
 				</div>
 
-
 				<div class="floorCon-slide j_SlideBanner">
 
 					<ul class="fCs-con" style="position: absolute; width: 999999px; left: -400px;">
-						<li class="ks-switchable-panel-internal166" style="display: block; float: left;"><a
-							href="http://www.tmall.com/go/act/sale/xihuguanz.php?spm=3.359242.295813.9&amp;ad_id=&amp;am_id=1301056392b576961c41&amp;cm_id=&amp;pm_id="
-							target="_blank" title="个人洗护 立减100"><img src="http://img03.taobaocdn.com/tps/i3/T1VjqzXA8aXXad1GY4-200-320.jpg_q90.jpg"
-								width="200" height="320" alt="个人洗护 立减100"></a></li>
-						<li class="ks-switchable-panel-internal166" style="display: block; float: left;"><a
-							href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.10&amp;active=1&amp;area_code=330100&amp;vmarket=0&amp;wwonline=1&amp;style=g&amp;sort=s&amp;n=60&amp;s=0&amp;cat=50026506"
-							target="_blank" title="魅力“型”男 一套搞定"><img
-								data-ks-lazyload-custom="http://img04.taobaocdn.com/tps/i4/T1he11XvpaXXad1GY4-200-320.jpg_q90.jpg" width="200" height="320"
-								alt="魅力“型”男 一套搞定"></a></li>
-						<li class="ks-switchable-panel-internal166" style="display: block; float: left;"><a
-							href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.11&amp;active=1&amp;from=sn_1_cat&amp;area_code=330100&amp;search_condition=7&amp;vmarket=0&amp;style=g&amp;sort=s&amp;n=60&amp;s=0&amp;cat=50041288#J_crumbs"
-							target="_blank" title="镜彩一夏 品牌太阳镜"><img width="200" height="320" alt="镜彩一夏 品牌太阳镜"
-								src="http://img02.taobaocdn.com/tps/i2/T1bnuUXrhdXXad1GY4-200-320.jpg_q90.jpg"></a></li>
+						<li class="ks-switchable-panel-internal166" style="display: block; float: left;">
+							<a href="" target="_blank" title="个人洗护 立减100">
+								<img src="http://img03.taobaocdn.com/tps/i3/T1VjqzXA8aXXad1GY4-200-320.jpg_q90.jpg" width="200" height="320" alt="个人洗护 立减100">
+							</a>
+						</li>
+						<li class="ks-switchable-panel-internal166" style="display: block; float: left;">
+							<a href="" target="_blank" title="魅力“型”男 一套搞定">
+								<img data-ks-lazyload-custom="http://img04.taobaocdn.com/tps/i4/T1he11XvpaXXad1GY4-200-320.jpg_q90.jpg" width="200" height="320"
+									alt="魅力“型”男 一套搞定">
+							</a>
+						</li>
+						<li class="ks-switchable-panel-internal166" style="display: block; float: left;">
+							<a href="" target="_blank" title="镜彩一夏 品牌太阳镜">
+								<img width="200" height="320" alt="镜彩一夏 品牌太阳镜" src="http://img02.taobaocdn.com/tps/i2/T1bnuUXrhdXXad1GY4-200-320.jpg_q90.jpg">
+							</a>
+						</li>
 					</ul>
 					<ul class="fCs-nav fCs-nav-num3">
-						<li class="fCs-nav1 ks-switchable-trigger-internal165" style="left: 220px;"><a
-							href="http://www.tmall.com/go/act/sale/xihuguanz.php?spm=3.359242.295813.12&amp;ad_id=&amp;am_id=1301056392b576961c41&amp;cm_id=&amp;pm_id="
-							target="_blank" title="个人洗护 立减100">个人洗护 立减100</a><s></s></li>
-						<li class="fCs-nav2 ks-switchable-trigger-internal165" style="left: 220px;"><a
-							href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.13&amp;active=1&amp;area_code=330100&amp;vmarket=0&amp;wwonline=1&amp;style=g&amp;sort=s&amp;n=60&amp;s=0&amp;cat=50026506"
-							target="_blank" title="魅力“型”男 一套搞定">魅力“型”男 一套搞定</a><s></s></li>
-						<li class="fCs-nav3 ks-switchable-trigger-internal165 active" style="left: 220px;"><a
-							href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.14&amp;active=1&amp;from=sn_1_cat&amp;area_code=330100&amp;search_condition=7&amp;vmarket=0&amp;style=g&amp;sort=s&amp;n=60&amp;s=0&amp;cat=50041288#J_crumbs"
-							target="_blank" title="镜彩一夏 品牌太阳镜">镜彩一夏 品牌太阳镜</a><s></s></li>
+						<li class="fCs-nav1 ks-switchable-trigger-internal165" style="left: 220px;">
+							<a href="" target="_blank" title="个人洗护 立减100">个人洗护 立减100</a>
+							<s></s>
+						</li>
+						<li class="fCs-nav2 ks-switchable-trigger-internal165" style="left: 220px;">
+							<a href="" target="_blank" title="魅力“型”男 一套搞定">魅力“型”男 一套搞定</a>
+							<s></s>
+						</li>
+						<li class="fCs-nav3 ks-switchable-trigger-internal165 active" style="left: 220px;">
+							<a href="" target="_blank" title="镜彩一夏 品牌太阳镜">镜彩一夏 品牌太阳镜</a>
+							<s></s>
+						</li>
 					</ul>
-
 				</div>
 
-
-				<a href="" class="floorCon-banner j_floorBanner" title="奢美汇" 	target="_blank"> 
+				<a href="" class="floorCon-banner j_floorBanner" title="奢美汇" target="_blank">
 					<img src="http://img04.taobaocdn.com/tps/i4/T1XZyHXAVbXXXHoWL4-200-300.jpg_q90.jpg" width="161" height="300" alt="奢美汇">
-				</a> 
-				<a href="" class="floorCon-banner j_floorBanner" title="表" target="_blank"> 
+				</a>
+				<a href="" class="floorCon-banner j_floorBanner" title="表" target="_blank">
 					<img src="http://img04.taobaocdn.com/tps/i4/T1F1SWXsNdXXXHoWL4-200-300.jpg_q90.jpg" width="161" height="300" alt="表">
 				</a>
-				<a href="" class="floorCon-banner j_floorBanner" title="表" target="_blank"> 
+				<a href="" class="floorCon-banner j_floorBanner" title="表" target="_blank">
 					<img src="http://img04.taobaocdn.com/tps/i4/T1F1SWXsNdXXXHoWL4-200-300.jpg_q90.jpg" width="161" height="300" alt="表">
 				</a>
 			</div>
