--- a/app/views/tags/top_bar.html
+++ b/app/views/tags/top_bar.html
@@ -3,7 +3,7 @@
 	<li class="sep">&{'topbar.welcome'} <a href="/myhome">${user?.name}</a></li>
 	<li>
 		<span>
-			<a class="track" href="@{Secure.login()}">[&nbsp;登录&nbsp;</a>|<a class="track" href="">&nbsp;免费注册&nbsp;]</a>
+			<a class="track" href="@{Secure.login()}">[&nbsp;登录&nbsp;</a>|<a class="track" href="@{Secure.login()}">&nbsp;免费注册&nbsp;]</a>
 		</span>
 	</li>
 	<li id="pageUsername"  style="display:none" >${user?.username}</li>
@@ -31,7 +31,7 @@
 					&{'topbar.welcome'}&nbsp;
 					<span>
 						<a class="track" href="@{Secure.login()}">[&nbsp;登录&nbsp;</a>|
-						<a class="track" href="">&nbsp;免费注册&nbsp;]</a>
+						<a class="track" href="/initreg">&nbsp;免费注册&nbsp;]</a>
 					</span>
 				</div>
 				<div class="recommendArea">
